# inversearena-frontend

./: .gitignore  .gitleaks.toml  ACCEPTANCE_CRITERIA_VERIFICATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  fix_admin.py  fix_all.py  fix_factory.py  fix_final.py  fix_final2.py  fix_final3.py  fix_final4.py  fix_lib.py  fix_test2.py  fix_tests.py
backend/: .env.example  README.md  docker-compose.monitoring.yml  docker-compose.yml  grafana-dashboard.json  jest.config.js  package-lock.json  package.json  tsconfig.json  verify-complete.sh
backend/src/: app.ts  (+1 more)
contract/: ARCHITECTURE.md  BOUNDS.md  CONTRACTS.md  Cargo.toml  DATA_MODEL.md  DEPLOY.md  ERRORS.md  EVENTS.md  README.md  extract.js  extract.py  test_invoker.rs
contract/arena/: Cargo.toml  abi_snapshot.json  test_output.txt
contract/arena/src/: abi_guard.rs  auto_advance_tests.rs  commit_reveal_tests.rs  eliminations.rs  events.rs  expire_arena_tests.rs  fuzz_tests.rs  integration_tests.rs  join_arena_tests.rs  lib.rs  metadata_tests.rs  mutation_tests.rs  oracle.rs  rwa.rs  snapshot_test.rs  state_machine.rs  state_machine_tests.rs  storage.rs  submit_choice_tests.rs  test.rs  types.rs
contracts/: Cargo.toml
docs/: CONTRIBUTING_CONTRACTS.md  RWA_YIELD_FLOW.md
frontend/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  jest.config.mjs  jest.setup.env.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  tsconfig.json
scripts/: package.json  setup-testnet.ts
(+333 files in other folders)
