[package]
name = "arena"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
oracle = { path = "../oracle" }
rwa-adapter = { path = "../rwa-adapter" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
